--- a/Styles/style.css
+++ b/Styles/style.css
@@ -786,7 +786,7 @@ html[data-page=index-german] .h4-title {
   max-width: 35rem;
   min-width: 20rem;
   min-height: 19rem;
-  background-color: #d1b5fd;
+  background-color: rgba(242, 215, 255, 0.6705882353);
   border: 0.4rem outset #a009f7;
   border-radius: 5.5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -794,13 +794,16 @@ html[data-page=index-german] .h4-title {
           backdrop-filter: blur(5px);
   transition: transform 1s;
 }
+.portfolio-items .portfolio-item:hover button {
+  background-color: rgba(242, 215, 255, 0.6705882353);
+}
 .portfolio-items .portfolio-item:hover {
-  background-color: rgba(160, 235, 130, 0.5215686275);
-  background-image: radial-gradient(rgba(0, 153, 255, 0.5), rgba(123, 255, 0, 0.5), rgba(255, 0, 255, 0.5), rgba(255, 251, 4, 0.5));
-  border: transparent;
+  background-color: #a009f7;
+  border: rgba(242, 215, 255, 0.6705882353) 0.5rem outset;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   transform: scale(1.05);
   z-index: 1000;
+  color: #fff;
 }
 .portfolio-items .portfolio-item:hover p {
   display: flex;
@@ -836,21 +839,6 @@ html[data-page=index-german] .h4-title {
   max-width: 100%;
   height: auto;
   border-radius: 1rem;
-}
-
-.items-2 .portfolio-item {
-  background-color: #73d0fc;
-  transition: background-color 0.3s ease;
-}
-.items-2 .portfolio-item:hover {
-  background-image: radial-gradient(rgba(101, 250, 146, 0.5), rgba(62, 211, 248, 0.5), rgba(236, 28, 236, 0.5), rgba(238, 121, 121, 0.5)) !important;
-  transition: 1s;
-}
-.items-2 .portfolio-item h5,
-.items-2 .portfolio-item p,
-.items-2 .portfolio-item img,
-.items-2 .portfolio-item i {
-  background-color: transparent;
 }
 
 .show-first {
