--- a/Styles/style.css
+++ b/Styles/style.css
@@ -938,6 +938,12 @@ html[data-page=index-german] .h4-title {
   flex-wrap: wrap;
 }
 
+.skillSetPair {
+  flex-direction: row;
+  display: flex;
+  max-width: 100%;
+}
+
 .skills-set {
   flex-direction: column;
   display: flex;
@@ -946,6 +952,7 @@ html[data-page=index-german] .h4-title {
   flex-wrap: wrap;
   width: 50%;
   min-height: 30rem;
+  margin: 1rem 7rem;
 }
 
 .skill {
@@ -953,7 +960,7 @@ html[data-page=index-german] .h4-title {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 1rem;
+  margin: 1rem;
   width: 8rem;
   height: 10rem;
   border-radius: 5rem;
